# fablex_engine

./: .gitignore  CMakeLists.txt
src/fablex/asset_manager/: CMakeLists.txt  asset.cpp  asset.h  asset_manager.cpp  asset_manager.h  asset_manager_test.cpp  asset_manager_test.h  asset_registry.cpp  asset_registry.h  asset_storage.cpp  asset_storage.h  common.h  enums.h  events.h  fwd.h  json_serialization.h
src/fablex/asset_manager/material/: material.cpp  material.h  material_settings.cpp  material_settings.h  opaque_material.cpp  opaque_material.h  opaque_material_settings.cpp  opaque_material_settings.h
src/fablex/asset_manager/model/: gltf_bridge.cpp  gltf_bridge.h  model.cpp  model.h  model_bridge.cpp  model_bridge.h
src/fablex/asset_manager/texture/: texture.cpp  texture.h  texture_bridge.cpp  texture_bridge.h  texture_importer.h
src/fablex/core/: CMakeLists.txt  color.h  compile_time_hash.h  core.cpp  core.h  event.h  flags_operations.h  fwd.h  halton.cpp  halton.h  input.h  input_enums.h  input_event.h  json_serialization.h  linear_allocator.h  logger.h  macro.h  math.cpp  math.h  memory.h  memory_utils.cpp  memory_utils.h  name.cpp  name.h  name_registry.cpp  name_registry.h  object.h  pool_allocator.h  task_composer.cpp  task_composer.h  task_types.h  timer.cpp  timer.h  types.h  utils.h  uuid.cpp  uuid.h  window.cpp  window.h
src/fablex/core/events/: event.h  event_handler.h  event_manager.cpp  event_manager.h
src/fablex/core/file_system/: archive.cpp  archive.h  archive_test.cpp  archive_test.h  file_system.cpp  file_system.h
src/fablex/core/object/: attribute.h  object.cpp  object.h  property.cpp  property.h  property_registrator.h  type_info.cpp  type_info.h  type_manager.cpp  type_manager.h
src/fablex/core/platform/: input_reader_win32.cpp  input_reader_win32.h  platform.h  platform_win32.h  utils_win32.cpp  utils_win32.h
src/fablex/core/primitives/: aabb.cpp  aabb.h  capsule.cpp  capsule.h  plane.cpp  plane.h  ray.cpp  ray.h  sphere.cpp  sphere.h
src/fablex/editor/: CMakeLists.txt  common.h  content_browser.cpp  content_browser.h  docking_window.cpp  docking_window.h  editor.cpp  editor.h  events.h  material_window.cpp  material_window.h  outliner_window.cpp  outliner_window.h  properties_window.cpp  properties_window.h  toolbar.cpp  toolbar.h  utils.cpp  utils.h  viewport_window.cpp  viewport_window.h  window_ui.h
src/fablex/engine/: CMakeLists.txt  engine.cpp  engine.h  events.h  fwd.h  tests.cpp
src/fablex/engine/components/: camera_component.cpp  camera_component.h  editor_camera_component.cpp  editor_camera_component.h  events.h  fwd.h  light_component.cpp  light_components.h  material_component.cpp  material_component.h  model_component.cpp  model_component.h  shader_entity_component.cpp  shader_entity_component.h
src/fablex/engine/entities/: model_entity.cpp  model_entity.h
src/fablex/engine/entity/: component.cpp  component.h  config.h  entity.cpp  entity.h  entity_manager.cpp  entity_manager.h  events.h  fwd.h  sparse_set.h  tags.h  world.cpp  world.h
src/fablex/main/: CMakeLists.txt  application.cpp  application.h  main.cpp
src/fablex/renderer/: CMakeLists.txt  buffer.cpp  buffer.h  command_manager.cpp  command_manager.h  common.h  constants.h  deletion_queue.cpp  deletion_queue.h  globals.h  imgui_interop_editor.h  imgui_interop_renderer.h  imgui_renderer.cpp  imgui_renderer.h  json_serialization.h  pipeline_manager.cpp  pipeline_manager.h  push_constants.cpp  push_constants.h  push_constants_manager.cpp  push_constants_manager.h  push_constants_serialization.h  render_context.h  render_graph.cpp  render_graph.h  render_graph_metadata.cpp  render_graph_metadata.h  render_graph_resource_manager.cpp  render_graph_resource_manager.h  render_pass.cpp  render_pass.h  render_pass_container.cpp  render_pass_container.h  render_surface.cpp  render_surface.h  renderer.cpp  renderer.h  renderer_config.cpp  renderer_config.h  resource.cpp  (+20 more)
src/fablex/renderer/render_passes/: object_mesh_test_pass.cpp  object_mesh_test_pass.h  object_pass.cpp  object_pass.h  path_tracing_pass.cpp  path_tracing_pass.h  rng_seed_generation_pass.cpp  rng_seed_generation_pass.h  rt_test_pass.cpp  rt_test_pass.h  svgf_atrous_pass.cpp  svgf_atrous_pass.h  svgf_filter_moments_pass.cpp  svgf_filter_moments_pass.h  svgf_final_modulate_pass.cpp  svgf_final_modulate_pass.h  svgf_pass.cpp  svgf_pass.h  swap_chain_pass.cpp  swap_chain_pass.h  test_pass.cpp  test_pass.h  triangle_pass.cpp  triangle_pass.h
src/fablex/renderer/scene_manager/: command_recorder.cpp  command_recorder.h  gpu_material.cpp  gpu_material.h  gpu_model.cpp  gpu_model.h  gpu_model_instance.cpp  gpu_model_instance.h  gpu_texture.cpp  gpu_texture.h  scene_manager.cpp  scene_manager.h  vertex.h
src/fablex/rhi/: CMakeLists.txt  enums.h  fwd.h  json_serialization.h  resources.h  rhi.h  utils.h
src/fablex/rhi/vulkan/: vulkan_api.h  (+2 more)
(+69 files in other folders)
